# spotify-coverflow

./: .cache-kylesurowiec  .gitignore  Cargo.toml  README.md  keys.json  requirements.txt  rustfmt.toml  spotifyCoverFlow.py  spotify_coverflow.py
src/: config.rs  http.rs  main.rs  server.rs  spotify.rs  util.rs
src/os/: macos.rs  mod.rs
src/spotify/: auth.rs  mod.rs  types.rs
src/ui/: mod.rs
src/ui/widgets/: image.rs
