[package]
name = "spotify-coverflow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
druid = "0.8.3"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
tiny_http = "0.11"
tokio = { version = "1", features = ["full"] }
