[package]
name = "spotify-coverflow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
druid = { version = "0.8.3", features = ["image"] }
futures = "0.3"
image = "0.24.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
tiny_http = "0.11"
tokio = { version = "1", features = ["full"] }
